--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   provider: ^3.0.0+1
   mobx_codegen: ^0.3.3+1
   flutter_mobx: ^0.3.0+1
+  flutter_cache_manager: ^1.1.1
+  shared_preferences: ^0.5.3+5
+  normal: ^0.5.1
+  path_provider: ^1.3.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
