--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,15 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.7.4
   build_runner: ^1.0.0
+
+flutter_icons:
+  android: true
+  ios: false
+  image_path: the_hat_icon_900x900.png
+  adaptive_icon_foreground: the_hat_icon_900x900.png
+  adaptive_icon_background: "#FFFFFF"
 
 
 # For information on the generic Dart part of this file, see the
