--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   shared_preferences: ^0.5.4+3
   normal: ^0.5.1
   path_provider: ^1.3.1
+  soundpool: ^0.5.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -40,8 +41,8 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: false
-  image_path: the_hat_icon_900x900.png
-  adaptive_icon_foreground: the_hat_icon_900x900.png
+  image_path: static/the_hat_icon_900x900.png
+  adaptive_icon_foreground: static/the_hat_icon_900x900.png
   adaptive_icon_background: "#FFFFFF"
 
 
@@ -60,6 +61,13 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+    - static/round_start_timer_tick.wav
+    - static/round_start_timer_timeout.wav
+    - static/round_timer_timeout.wav
+    - static/word_outcome_ok.wav
+    - static/word_outcome_fail.wav
+    - static/word_outcome_timeout.wav
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
