--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   shared_preferences: ^0.5.4+3
   normal: ^0.5.1
   path_provider: ^1.3.1
-  soundpool: ^0.5.3
+  audioplayers: 0.13.2
   url_launcher: ^5.2.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -41,7 +41,7 @@ dev_dependencies:
 
 flutter_icons:
   android: true
-  ios: false
+  ios: true
   image_path: static/the_hat_icon_900x900.png
   adaptive_icon_foreground: static/the_hat_icon_900x900.png
   adaptive_icon_background: "#FFFFFF"
@@ -63,12 +63,12 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   assets:
-    - static/round_start_timer_tick.wav
-    - static/round_start_timer_timeout.wav
-    - static/round_timer_timeout.wav
-    - static/word_outcome_ok.wav
-    - static/word_outcome_fail.wav
-    - static/word_outcome_timeout.wav
+    - assets/round_start_timer_tick.wav
+    - assets/round_start_timer_timeout.wav
+    - assets/round_timer_timeout.wav
+    - assets/word_outcome_ok.wav
+    - assets/word_outcome_fail.wav
+    - assets/word_outcome_timeout.wav
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -79,7 +79,7 @@ flutter:
   fonts:
     - family: TelegramIcon
       fonts:
-        - asset: static/TelegramIcon.ttf
+        - asset: assets/TelegramIcon.ttf
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
