--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   url_launcher: ^5.4.1
   uuid: ^2.0.4
   sentry: ^3.0.0+1
+  marquee: ^1.3.1
+  intl: ^0.16.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
