--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   marquee: ^1.3.1
   intl: ^0.16.0
   share: ^0.6.3+5
+  liquid_progress_indicator: ^0.3.2
+  path_drawing: ^0.4.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
