--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: beret
-description: A new Flutter project.
+description: The Hat game.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
