--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,9 @@
 name: beret
-description: The Hat game.
+description: App to play the Hat game
+
+# The following line prevents the package from being accidentally published to
+# pub.dev using `pub publish`. This is preferred for private packages.
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -14,20 +18,20 @@ description: The Hat game.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  mobx: ^0.4.0+1
+  mobx: ^1.2.1+2
   provider: ^4.0.1
-  mobx_codegen: ^0.3.12
-  flutter_mobx: ^0.3.5
+  mobx_codegen: ^1.1.0+1
+  flutter_mobx: ^1.1.0+2
   flutter_cache_manager: ^1.1.3
   shared_preferences: ^0.5.6
   normal: ^0.5.1
   path_provider: ^1.5.1
-  audioplayers: ^0.13.5
+  audioplayers: ^0.15.1
   url_launcher: ^5.4.5
   uuid: ^2.0.4
   sentry: ^3.0.0+1
@@ -36,6 +40,7 @@ dependencies:
   share: ^0.6.3+5
   liquid_progress_indicator: ^0.3.2
   path_drawing: ^0.4.1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -43,8 +48,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.7.4
-  build_runner: ^1.7.2
+  flutter_launcher_icons: ^0.7.5
+  build_runner: ^1.10.1
 
 flutter_icons:
   android: true
@@ -53,7 +58,6 @@ flutter_icons:
   android_image_path: assets/the_hat_icon_900x900.png
   adaptive_icon_foreground: assets/the_hat_icon_900x900.png
   adaptive_icon_background: "#FFFFFF"
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -68,8 +72,15 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
+
+  # An image asset can refer to one or more resolution-specific "variants", see
+  # https://flutter.dev/assets-and-images/#resolution-aware.
+
+  # For details regarding adding assets from package dependencies, see
+  # https://flutter.dev/assets-and-images/#from-packages
+
   assets:
     - assets/round_start_timer_tick.wav
     - assets/round_start_timer_timeout.wav
@@ -78,17 +89,6 @@ flutter:
     - assets/word_outcome_fail.wav
     - assets/word_outcome_timeout.wav
     - assets/the_hat_loading.png
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  fonts:
-    - family: TelegramIcon
-      fonts:
-        - asset: assets/TelegramIcon.ttf
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
@@ -109,3 +109,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+  fonts:
+    - family: TelegramIcon
+      fonts:
+        - asset: assets/TelegramIcon.ttf
