--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   share: ^0.6.3+5
   liquid_progress_indicator: ^0.3.2
   path_drawing: ^0.4.1
+  auto_size_text: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -55,7 +56,6 @@ flutter_icons:
   android: true
   ios: false
   image_path: assets/the_hat_icon_900x900.png
-  android_image_path: assets/the_hat_icon_900x900.png
   adaptive_icon_foreground: assets/the_hat_icon_900x900.png
   adaptive_icon_background: "#FFFFFF"
 
