--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,38 +18,38 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  mobx: ^1.2.1+2
-  provider: ^4.0.1
-  mobx_codegen: ^1.1.0+1
-  flutter_mobx: ^1.1.0+2
-  flutter_cache_manager: ^1.1.3
-  shared_preferences: ^0.5.6
-  normal: ^0.5.1
-  path_provider: ^1.5.1
-  audioplayers: ^0.15.1
-  url_launcher: ^5.4.5
-  uuid: ^2.0.4
-  sentry: ^3.0.0+1
-  marquee: ^1.3.1
-  intl: ^0.16.0
-  share: ^0.6.3+5
-  liquid_progress_indicator: ^0.3.2
-  path_drawing: ^0.4.1
+  mobx: ^2.0.1
+  provider: ^5.0.0
+  flutter_mobx: ^2.0.0
+  flutter_cache_manager: ^3.1.2
+  shared_preferences: ^2.0.6
+  normal: ^0.6.0
+  path_provider: ^2.0.2
+  audioplayers: ^0.19.1
+  url_launcher: ^6.0.9
+  uuid: ^3.0.4
+  intl: ^0.17.0
+  share_plus: ^2.1.4
+  liquid_progress_indicator: ^0.4.0
+  path_drawing: ^0.5.1
+  sentry_flutter: ^5.1.0
+  device_info_plus: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.7.5
-  build_runner: ^1.10.1
+  flutter_launcher_icons: ^0.9.0
+  build_runner: ^2.0.6
+  mobx_codegen: ^2.0.1+3
 
 flutter_icons:
   android: true
