--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,3 +76,14 @@ flutter {
 }
 
 dependencies {}
+
+ext.abiCodes = ['x86_64': 1, 'armeabi-v7a': 2, 'arm64-v8a': 3]
+import com.android.build.OutputFile
+android.applicationVariants.all { variant ->
+  variant.outputs.each { output ->
+    def baseAbiVersionCode = project.ext.abiCodes.get(output.getFilter(OutputFile.ABI))
+    if (baseAbiVersionCode != null) {
+      output.versionCodeOverride = variant.versionCode * 10 + baseAbiVersionCode
+    }
+  }
+}
